# DeltaGL

./: CMakeLists.txt  Photon.sln
Photon/: Photon.vcxproj  Photon.vcxproj.filters
Photon/Src/: Photon.cpp
Photon/Src/GFX/: DeltaGL.h  Framebuffer.hpp  Hashmap.c  Rasterizer.h
Src/: main.cpp
Src/GFX/: Framebuffer.hpp  Rasterizer.hpp
